--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -48,7 +48,8 @@ jobs:
           echo "${{ secrets.RENDER_API_KEY }}" | awk '{ print length }'
 
       - name: Trigger deployment
-        if: ${{ github.event_name == 'push' }}
+        # Skip deploy if commit message contains #skip
+        if: ${{ github.event_name == 'push' && !contains(join(github.event.commits.*.message, ' '), '#skip') }}
         run: curl "https://api.render.com/deploy/srv-${{ secrets.RENDER_SERVICE_ID }}?key=${{ secrets.RENDER_API_KEY }}"
 
       # Version tag
