Test Discord failure notification

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -52,6 +52,33 @@ jobs:
         if: ${{ github.event_name == 'push' && !contains(join(github.event.commits.*.message, ' '), '#skip') }}
         run: curl "https://api.render.com/deploy/srv-${{ secrets.RENDER_SERVICE_ID }}?key=${{ secrets.RENDER_API_KEY }}"
 
+      # Success notification
+      - name: Notify Discord on successful deploy
+        if: ${{ success() && github.event_name == 'push' && !contains(join(github.event.commits.*.message, ' '), '#skip') }}
+        uses: rjstone/discord-webhook-notify@v2
+        with:
+          webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
+          severity: info
+          details: |
+            Deployment successful
+            Repository: ${{ github.repository }}
+            Commit: ${{ github.sha }}
+            Message: ${{ github.event.head_commit.message }}
+
+      # Failure notification
+      - name: Notify Discord on failure
+        if: ${{ failure() }}
+        uses: rjstone/discord-webhook-notify@v2
+        with:
+          webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
+          severity: error
+          details: |
+            Build failed
+            Repository: ${{ github.repository }}
+            Commit: ${{ github.sha }}
+            Commit link: https://github.com/${{ github.repository }}/commit/${{ github.sha }}
+            Message: ${{ github.event.head_commit.message || github.event.pull_request.title || 'No commit message available' }}
+
       # Version tag
       - name: Bump version and push tag
         uses: anothrNick/github-tag-action@1.64.0
